# PyAI

./: .gitignore  CMakeLists.txt  build.sh  main.py  model.npz  pyai
cuda/: cuda_ops.cu  cuda_ops.h
input_files/: pg78818.txt  pg78819.txt  pg78820.txt  pg78821.txt  pg78822.txt  pg78823.txt  pg78824.txt  pg78825.txt  pg78826.txt  pg78827.txt
python/: main.py
src/: downloader.cpp  downloader.h  generator.cpp  generator.h  main.cpp  model.cpp  model.h  neurallm.h  settings.cpp  settings.h  tokenizer.cpp  tokenizer.h  trainer.cpp  trainer.h  utils.cpp  utils.h  vocab.cpp  vocab.h
